

		<RelativeLayout
			xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
			android:layout_width="match_parent"
			android:background="@color/mainColor"
			android:layout_height="match_parent" >


			<RelativeLayout
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>
				<TextView
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_marginLeft="31dp"
					android:layout_marginTop="190dp"
					android:layout_width="60dp"
					android:layout_height="38dp"
					android:text="Name"
					/>

				<EditText
					android:id="@+id/signUpNameEt"
					android:layout_width="336dp"
					android:layout_height="44dp"
					android:layout_marginStart="35dp"
					android:layout_marginTop="220dp"
					android:background="@drawable/edittextbackground"
					android:paddingStart="20dp" />
				<TextView
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_marginLeft="31dp"
					android:layout_marginTop="260dp"
					android:layout_width="60dp"
					android:layout_height="38dp"
					android:text="@string/email_ek1_string"
					 />

				<EditText android:id="@+id/signUpEmailEt"
					android:background="@drawable/edittextbackground"
					 android:layout_marginStart="35dp"
					android:layout_marginTop="300dp"
					android:layout_width="336dp"
					android:paddingStart="20dp"
					android:layout_height="44dp" />

				<TextView

					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="355dp"
					android:layout_width="94dp"
					android:layout_height="38dp"
					android:text="@string/password_ek2_string"
					 />

				<EditText
					android:id="@+id/signUpPasswordEt"

					android:layout_width="336dp"
					android:layout_height="44dp"
					android:layout_marginStart="34dp"
					android:layout_marginTop="390dp"
					android:background="@drawable/edittextbackground"
					android:inputType="textPassword"
					android:paddingStart="20dp" />

				<TextView

                    android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_marginLeft="30dp"
					android:layout_marginTop="452dp"
					android:layout_width="133dp"
					android:layout_height="38dp"
					android:text="@string/phone_number_string"
					 />

				<EditText
					android:id="@+id/signUpPhoneEt"
					android:layout_width="336dp"
					android:layout_height="44dp"
					android:layout_marginStart="34dp"
					android:layout_marginTop="497dp"
					android:background="@drawable/edittextbackground"
					android:inputType="phone"
					android:paddingStart="20dp" />



				<View
                    android:background="@drawable/ellipse_23_shape"
					 android:layout_marginStart="140dp"
					android:layout_marginTop="588dp"
					android:layout_width="133dp"
					android:layout_height="125dp" />

				<View
                    android:background="@drawable/ellipse_23_shape"
					 android:layout_marginStart="151dp"
					android:layout_marginTop="597dp"
					android:layout_width="112dp"
					android:layout_height="108dp" />
				<View
                    android:background="@drawable/_ellipse_1_ek7_shape"
					android:layout_marginStart="161dp"
					android:layout_marginTop="611dp"
					android:layout_width="90dp"
					android:layout_height="78dp" />

				<TextView
					android:id="@+id/sing_upRegisterTV"
					android:layout_width="93dp"
					android:layout_height="37dp"
					android:layout_marginLeft="176dp"
					android:layout_marginTop="638dp"
					android:text="@string/sing_up_string"
					android:textColor="@color/setting_color"
					android:textSize="18sp" />


				<RelativeLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
                        android:layout_width="411dp"
						android:layout_height="190dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/mask" />

				</RelativeLayout>

				<TextView

                    android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="36sp"
					android:textColor="@color/setting_color"
					android:layout_marginLeft="138dp"
					android:layout_marginTop="43dp"
					android:layout_width="146dp"
					android:layout_height="75dp"
					android:text="@string/sign_up_string"
					 />

				<TextView android:id="@+id/signupHaveAnAccount"

					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_marginLeft="10dp"
					android:layout_marginTop="686dp"
					android:layout_width="144dp"
					android:layout_height="38dp"
					android:text="@string/_already_have_an_acco_ek1_string"
					 />

			</RelativeLayout>

		</RelativeLayout>

