	<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
		    android:orientation="vertical"
			android:layout_height="match_parent" >

			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View
                    android:background="@drawable/_bg__activity_after_checking3_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />



				<View
                    android:background="@drawable/rectangle_ek6_shape"
					 android:layout_marginStart="17dp"
					android:layout_marginTop="203dp"
					android:layout_width="384dp"
					android:layout_height="315dp" />


				<ImageView
                    android:src="@drawable/_11_link_unlink_morph_outline_1_ek1"
					android:contentDescription="_11_link_unlink_morph_outline_1_ek1"
					 android:layout_marginStart="105dp"
					android:layout_marginTop="41dp"
					android:layout_width="199dp"
					android:layout_height="133dp" />

				<EditText
					android:id="@+id/etConfirmationEmail"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="29dp"
					android:layout_marginTop="435dp"
					android:layout_marginEnd="20dp"
					android:background="@drawable/rec_white_shape_with_corner"
					android:backgroundTint="@color/Transparent"
					android:contentDescription="rec_ek16"
					android:hint="type your email"
					android:src="@drawable/rec_ek16"
					android:textSize="26sp" />



				<TextView
                    android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="@color/allowed_to_enter_ek1_color"
					android:layout_centerInParent="true"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/email_a_confirmation_code_to_the_your_email_string"
					 />




				<TextView

                    android:textSize="24sp"
					android:textColor="@color/view_security_page_color"
					android:layout_marginLeft="29dp"
					android:layout_marginTop="227dp"
					android:layout_width="265dp"
					android:layout_height="37dp"
					android:text="@string/confirmation_string"
					 />

				<TextView

                    android:textSize="16sp"
					android:textColor="@color/sorry_you_can_not_enter_for_your_violating_by_not_wearing_mask_or_complete_your_vaccinations_color"
					android:layout_marginLeft="257dp"
					android:layout_marginTop="485dp"
					android:layout_width="165dp"
					android:layout_height="38dp"
					android:text="@string/not_active_account_string"
					 />

				<View
					android:layout_width="133dp"
					android:layout_height="125dp"
					android:layout_marginStart="140dp"
					android:layout_marginTop="567dp"
					android:alpha=".5"
					android:background="@drawable/ellipse_23_shape" />

				<View
					android:layout_width="112dp"
					android:layout_height="108dp"
					android:layout_marginStart="150dp"
					android:layout_marginTop="576dp"
					android:background="@drawable/ellipse_23_shape" />

				<View
					android:layout_width="90dp"
					android:layout_height="78dp"
					android:layout_marginStart="160dp"
					android:layout_marginTop="590dp"
					android:background="@drawable/buttonbackground" />


				<TextView
					android:id="@+id/tvEmailConfirmationSend"
					android:layout_width="72dp"
					android:layout_height="37dp"
					android:layout_marginStart="185dp"
					android:layout_marginTop="617dp"
					android:text="@string/send_ek1_string"
					android:textColor="@color/setting_color"
					android:textSize="18sp" />

			</RelativeLayout>



		</LinearLayout>
